# MeshProcessingKit

./: .gitignore  CMakeLists.txt  MeshProcessingKit.kdev4  QMesh.kdev4  README.md  proj.vim
.kdev4/: MeshProcessingKit.kdev4  QMesh.kdev4
imgui/: imgui_impl_glut.cpp
ply/: CMakeLists.txt  ply2obj.c
src/: DrawUtil.cpp  DrawUtil.h  GLUTApp.cpp  GLUTApp.h  GLUTView.cpp  GLUTView.h  GLView.cpp  GLView.h  Main.cpp  MeshFair.cpp  MeshIO.cpp  MeshIO.h  MyGLUT.h  OBJReader.cpp  PickPixel.h  Timer.cpp  Timer.h  Trackball.h  TriMesh.cpp  TriMesh.h  TriMeshSmooth.cpp  TriMeshUtil.cpp  Variables.h  XGLM.h  utilities.cpp  utilities.h
src/Math3D/: mat.h  math.h  quat.h  vec.h  vmacros.h
vs2010/: MeshKit.sln  MeshKit.vcxproj  MeshKit.vcxproj.filters  mpk.vcxproj
vs2013/: MeshKit.vcxproj  MeshKitSolution.sln  mpk.sln
